RESOLVED FIXED233724
REGRESSION(r286037): Introduced WebRTC crash
https://bugs.webkit.org/show_bug.cgi?id=233724
Summary REGRESSION(r286037): Introduced WebRTC crash
WebKit Commit Bot
Reported 2021-12-01 13:59:57 PST
https://commits.webkit.org/r286037 introduced a regression: Introduced WebRTC crash This is an automatic bug report generated by webkitbot. If this bug report was created because of a flaky test, please file a bug for the flaky test (if we don't already have one on file) and dup this bug against that bug so that we can track how often these flaky tests fail.
Attachments
REVERT of r286037 (19.10 KB, patch)
2021-12-01 14:00 PST, WebKit Commit Bot
no flags
WebKit Commit Bot
Comment 1 2021-12-01 14:00:04 PST
Created attachment 445612 [details] REVERT of r286037 Any committer can land this patch automatically by marking it commit-queue+. The commit-queue will build and test the patch before landing to ensure that the revert will be successful. This process takes approximately 15 minutes. If you would like to land the revert faster, you can use the following command: webkit-patch land-attachment ATTACHMENT_ID where ATTACHMENT_ID is the ID of this attachment.
EWS
Comment 2 2021-12-01 14:02:15 PST
Committed r286386 (244743@main): <https://commits.webkit.org/244743@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 445612 [details].
Radar WebKit Bug Importer
Comment 3 2021-12-01 14:03:23 PST
Note You need to log in before you can comment on or make changes to this bug.