Cherry-pick r286386. rdar://problem/75225923

Unreviewed, reverting r286037.
    https://bugs.webkit.org/show_bug.cgi?id=233724

    Introduced WebRTC crash

    Reverted changeset:

    "[macOS][GPUP] Remove access in sandbox to
    com.apple.audio.AudioComponentRegistrar"
    https://bugs.webkit.org/show_bug.cgi?id=231694
    https://commits.webkit.org/r286037

    Canonical link: https://commits.webkit.org/244743@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@286386 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/244592.2@safari-613.1.10-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-613.1.10-branch@286407 268f45cc-cd09-0410-ab3c-d52691b4dbfc