Source/WebKit/UIProcess/WebProcessPool.cpp
@@ -130,7 +130,6 @@
 #endif
 
 #if PLATFORM(COCOA)
-#include "AudioComponentRegistration.h"
 #include "DefaultWebBrowserChecks.h"
 #include <WebCore/GameControllerGamepadProvider.h>
 #include <WebCore/HIDGamepadProvider.h>
@@ -879,7 +878,7 @@ void WebProcessPool::initializeNewWebProcess(WebProcessProxy& process, WebsiteDa
 #endif
 
 #if PLATFORM(COCOA)
-    sendAudioComponentRegistrations<Messages::WebProcess::ConsumeAudioComponentRegistrations>(process);
+    process.sendAudioComponentRegistrations();
 #endif
 
 #if PLATFORM(MAC)
